# asuna-memory-system

./: .gitignore  Cargo.toml  README.md  README_EN.md  for_ai.md
.github/workflows/: release.yml
docs/: AMS-DEVELOPER-ENGINEERING-GUIDE-20260411.md  BUG-20260411-1636-ams-vector-engine-not-loading.md  BUG-20260411-1753-ams-chinese-search-fail.md  BUG-20260411-2101-ams-vector-db-not-populated.md  BUG-20260411-2326-ams-v113-vector-index-regressed-to-zero-after-fts-migration.md  ROOT_CAUSE-AMS-ONNX-TOKEN_TYPE_IDS.md  architecture.md  code_review_report.md  design_decisions.md  logs.json  memory-system-memo.md  research_report.md  summary.json
docs/plans/: 2026-04-10-asuna-memory-system.md
src/: config.rs  main.rs
src/embedder/: download.rs  mod.rs  onnx.rs  tokenizer.rs
src/fact/: conversation.rs  e2e_test.rs  mod.rs  overwrite_test.rs  search.rs  session_store.rs  zh_repro_test.rs
src/growth/: audit.rs  bounded_memory.rs  mod.rs  security.rs
src/index/: db.rs  fts.rs  mod.rs  rebuild.rs  schema.rs  vector.rs
src/mcp/: protocol.rs  server.rs  tools.rs
src/util/: id.rs  mod.rs  text.rs  time.rs
