[package]
name = "asuna-memory"
version = "1.0.2"
edition = "2021"
description = "AI Agent Memory System - MCP Server"
readme = "README.md"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "blob", "functions"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic"] }
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
ndarray = "0.16"
regex-lite = "0.1"

[profile.release]
lto = true
strip = true
